# otus-cpp-course

./: .travis.yml  1000.cpp  1001.cpp  1293.cpp  1785.cpp  2012.cpp  CMakeLists.txt  Doxyfile  README.md  constexpr_closest_deg.cpp
source/: Allocator.h  AsyncBulkManager.cpp  AsyncBulkManager.h  BulkServer.cpp  BulkServer.h  CMakeLists.txt  ConcurrentQueue.h  Document.cpp  Document.h  Exporter.cpp  Exporter.h  MVC.cpp  MVC.h  Renderer.cpp  Renderer.h  Shape.h  Types.h  allocator.h  allocator_test.cpp  async.cpp  bulk.cpp  bulk.h  custom_list.h  lib.cpp  lib.h  main.cpp  matrix.cpp  matrix.h  print_ip.h  test.cpp  test_ip.cpp  test_major_version.cpp  test_print_ip.cpp  test_version.cpp
